--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   #数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://ip:port/DB_NAME?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://117.72.87.42:3306/guangyu_picture?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: Root@1234
 
