COS对象存储上传与下载

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ server:
 spring:
   application:
     name: guangyu-backend
+  profiles:
+    active: local
   #数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
