--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
             <version>5.6.227</version>
         </dependency>
 
+        <!-- HTML 解析：https://jsoup.org/ -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.3</version>
+        </dependency>
+
 
         <!--工具库:https://doc.hutool.cn/pages/index/-->
         <dependency>
