--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,4 +33,4 @@ knife4j:
       default:
         api-rule: package
         api-rule-resources:
-          - com.guangyu.guangyubackend.controller
+          - com.guangyu.guangyubackend.interfaces.controller
